--- a/contacto.html
+++ b/contacto.html
@@ -74,9 +74,9 @@
                         </div>
             
                         <div class="col66">
-                            <label for="mail">Correo Electrónico</label>
+                            <label for="mail">Email</label>
                             <input type="email" name="mail"
-                            id="mail" placeholder="Correo Electrónico">
+                            id="mail" placeholder="Email">
                         </div>
                         </div>
 
@@ -156,7 +156,7 @@
                     <p>Todos los contenidos de la página: www.alquilersinriesgo.com, son propiedad intelectual de A.S.R. 1990 SERVICIOS INMOBILIARIOS FRANQUICIADOS, S.L., o de terceros y no podrán ser reproducidos, copiados, pegados, linkados, transmitidos, distribuidos o manipulados de cualquier forma y con cualquier finalidad, sin la autorización previa y por escrito de A.S.R. 1990 SERVICIOS INMOBILIARIOS FRANQUICIADOS, S.L., manteniendo en todo momento el “copyright” intacto y cualquier otro indicador de la propiedad intelectual de los materiales o contenidos. Todo uso o modificación del Material o de los Contenidos para cualquier otro fin distinto del autorizado en las Condiciones Generales será considerado una violación de las leyes internacionales del “copyright”, que protegen los derechos de autor.</p>
                     
                     <h2>Obligación de secreto profesional y confidencialidad</h2>
-                    <p>El personal de A.S.R. 1990 SERVICIOS INMOBILIARIOS FRANQUICIADOS, S.L. que tuviera algún tipo de intervención en los servicios prestados al cliente está comprometido a no divulgar ni hacer uso de la información a la que haya accedido por razón de su profesión, por así disponerlo el artículo 5 del Código Deontológico de la Abogacía Española. La información suministrada por el cliente tendrá, en todo caso, la consideración de confidencial, sin que pueda ser utilizada para otros fines que los relacionados con los servicios contratados. A.S.R. 1990 SERVICIOS INMOBILIARIOS FRANQUICIADOS, S.L. se obliga a no divulgar ni revelar información sobre las pretensiones del cliente, los motivos del asesoramiento solicitado o la duración de su relación con éste.</p>
+                    <p>El personal de A.S.R. 1990, SERVICIOS INMOBILIARIOS FRANQUICIADOS, S.L. que tuviera algún tipo de intervención en los servicios prestados al cliente está comprometido a no divulgar ni hacer uso de la información a la que haya accedido por razón de su profesión, por así disponerlo el artículo 5 del Código Deontológico de la Abogacía Española. La información suministrada por el cliente tendrá, en todo caso, la consideración de confidencial, sin que pueda ser utilizada para otros fines que los relacionados con los servicios contratados. A.S.R. 1990 SERVICIOS INMOBILIARIOS FRANQUICIADOS, S.L. se obliga a no divulgar ni revelar información sobre las pretensiones del cliente, los motivos del asesoramiento solicitado o la duración de su relación con éste.</p>
 
                     <h2> Responsabilidad por el contenido del sitio web</h2>
                     <p>El Sitio Web contiene textos elaborados con fines meramente informativos o divulgativos que pueden no reflejar el estado actual de la legislación o la jurisprudencia. En ningún caso pueden ser considerados sustitutivo de un asesoramiento legal personalizado. Así pues, el usuario no debe actuar sobre la base de la información contenida en este Sitio Web sin recurrir previamente al correspondiente asesoramiento profesional. Los enlaces externos que contiene este Sitio Web conducen a sitios gestionados por terceros. A.S.R. 1990 SERVICIOS INMOBILIARIOS FRANQUICIADOS, S.L no responde de los contenidos ni del estado de dichos sitios.</p>
