--- a/descripcion1.html
+++ b/descripcion1.html
@@ -89,9 +89,9 @@
                             </div>
                 
                             <div class="col66">
-                                <label for="mail">Correo Electrónico</label>
+                                <label for="mail">Email</label>
                                 <input type="email" name="mail"
-                                id="mail" placeholder="Correo Electrónico">
+                                id="mail" placeholder="Email">
                             </div>
                             </div>
                         </div>
