--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             <div class="col1 columna">
                 <img src="./img/alquiler.jpg" alt="Alquiler">
-                <a href="alquiler.html" class="boton alquiler">Alquiler Vivienda</a>
+                <a href="alquiler1.html" class="boton alquiler">Alquiler Vivienda</a>
             </div>
         </div>
 
