--- a/alquiler3.html
+++ b/alquiler3.html
@@ -218,7 +218,7 @@
                                    
                                    <li><a href="alquiler1.html">1</a></li>
                                    <li><a href="alquiler2.html" >2</a></li>
-                                   <li><a href="alquiler3.html">3</a></li>
+                                   <li><a href="alquiler3.html" class"activo">3</a></li>
                                  
                                </ul>
                     </section>  
