--- a/alquiler3.html
+++ b/alquiler3.html
@@ -22,7 +22,7 @@
           <ul>
               <li><a href="index.html" >Inicio</a></li>
               <li><a href="compra.html"> </a></li>
-              <li><a href="alquiler.html" class="activo">Alquiler</a></li>
+              <li><a href="alquiler1.html" class="activo">Alquiler</a></li>
               <li><a href="contacto.html">Contacto</a></li>
           </ul>
       </nav>
