incluir class activo

--- a/compra.html
+++ b/compra.html
@@ -216,8 +216,8 @@
               <section class="paginacion">
                     <ul>
                             
-                           <li><a href="compra.html">1</a></li>
-                           <li><a href="pagina2.html" class="activo">2</a></li>
+                           <li><a href="compra.html" class="activo">1</a></li>
+                           <li><a href="pagina2.html" >2</a></li>
                            <li><a href="pagina3.html">3</a></li>
                           
                        </ul>
