--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html" class="activo">Inicio</a></li>
-                    <li><a href="compra.html">Compra</a></li>
+                    <li><a href="compra.html">compra</a></li>
                     <li><a href="alquiler1.html">Alquiler</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
