--- a/pagina2.html
+++ b/pagina2.html
@@ -28,11 +28,10 @@
     </nav>
     
     <a href="index.html">Inicio</a>
-    <span> </span>
+    <span> > </span>
     <span class="activo"> Compra</span>
     <h2>Compra</h2>
-    <div class="cont80">
-    </div>
+   
 
 </header>
         <div class="contenedor2">
