--- a/pagina2.html
+++ b/pagina2.html
@@ -27,7 +27,7 @@
       </ul>
     </nav>
     
-    <a href="index.html">Inicio</a>
+    <a href="inicio.html">Inicio</a>
     <span> > </span>
     <span class="activo"> Compra</span>
     <h2>Compra</h2>
