--- a/pagina2.html
+++ b/pagina2.html
@@ -27,10 +27,11 @@
       </ul>
     </nav>
     
-    <a href="inicio.html">Inicio</a>
-    <span> > </span>
-    <span class="activo"> Compra</span>
-    <h2>Compra</h2>
+     <div class="margen1">
+        <a href="inicio.html">Inicio</a>
+       <span> > </span>
+       <span> Compra</span>
+   </div> 
    
 
 </header>
