--- a/pagina3.html
+++ b/pagina3.html
@@ -26,8 +26,13 @@
           <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </nav>
-
 </header>
+    
+     <div class="margen1">
+        <a href="inicio.html">Inicio</a>
+       <span> > </span>
+       <span> Compra</span>
+   </div>  
         <div class="contenedor2">
             <div class="tarjeta">
                 <div class="imagen">
