--- a/alquiler1.html
+++ b/alquiler1.html
@@ -236,7 +236,7 @@
                     <div class="col1 centro">
                        <a href="index.html" class="activo">Inicio</a>
                        <a href="compras.html">Compras</a>
-                       <a href="alquiler.html">Alquiler</a>
+                       <a href="alquiler.html">Alquiler class="activo"</a>
                        <a href="contacto.html">Contacto</a>
                     </div>
         
