--- a/compra.html
+++ b/compra.html
@@ -232,8 +232,8 @@
                        <p><i class="far fa-envelope-open"></i>costadelsol@inmobiliaria.es</p>
                     </div>
                     <div class="col1 centro">
-                       <a href="index.html" class="activo">Inicio</a>
-                       <a href="compras.html">Compras</a>
+                       <a href="index.html" >Inicio</a>
+                       <a href="compras.html"class="activo">Compras</a>
                        <a href="alquiler.html">Alquiler</a>
                        <a href="contacto.html">Contacto</a>
                     </div>
