--- a/alquiler1.html
+++ b/alquiler1.html
@@ -234,9 +234,9 @@
                        <p><i class="far fa-envelope-open"></i>costadelsol@inmobiliaria.es</p>
                     </div>
                     <div class="col1 centro">
-                       <a href="index.html" class="activo">Inicio</a>
+                       <a href="index.html">Inicio</a>
                        <a href="compras.html">Compras</a>
-                       <a href="alquiler.html">Alquiler class="activo"</a>
+                       <a href="alquiler1.html">Alquiler class="activo"</a>
                        <a href="contacto.html">Contacto</a>
                     </div>
         
