--- a/alquiler3.html
+++ b/alquiler3.html
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                         <p><i class="fas fa-bath"></i> 3</p>
-                        <a href="compra1.html" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                        <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
                       
                     </div>
                 </div>
