--- a/alquiler2.html
+++ b/alquiler2.html
@@ -54,7 +54,7 @@
                             </div>
                         </div>
                         <p><i class="fas fa-bath"></i>6</p>
-                        <a href="compra1.html" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                        <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
                       
                     </div>
                 </div>
