--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="col1 centro">
            <a href="index.html" class="activo">Inicio</a>
            <a href="compras.html">Compras</a>
-           <a href="alquiler.html">Alquiler</a>
+           <a href="alquiler1.html">Alquiler</a>
            <a href="contacto.html">Contacto</a>
         </div>
         <div class= "col1 dcha">
