--- a/compra.html
+++ b/compra.html
@@ -22,7 +22,7 @@
       <nav>
           <ul>
               <li><a href="index.html" >Inicio</a></li>
-              <li><a href="compra.html" class="activo">compra</a></li>
+              <li><a href="compra.html" class="activo">Compra</a></li>
               <li><a href="alquiler1.html">Alquiler</a></li>
               <li><a href="contacto.html">Contacto</a></li>
           </ul>
