--- a/compra.html
+++ b/compra.html
@@ -233,7 +233,7 @@
                     </div>
                     <div class="col1 centro">
                        <a href="index.html" >Inicio</a>
-                       <a href="compras.html"class="activo">Compras</a>
+                       <a href="compra.html"class="activo">Compras</a>
                        <a href="alquiler.html">Alquiler</a>
                        <a href="contacto.html">Contacto</a>
                     </div>
