--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
         <div class="col1 centro">
            <a href="index.html" class="activo">Inicio</a>
-           <a href="compras.html">Compras</a>
+           <a href="compra.html">Compras</a>
            <a href="alquiler1.html">Alquiler</a>
            <a href="contacto.html">Contacto</a>
         </div>
