--- a/alquiler1.html
+++ b/alquiler1.html
@@ -55,7 +55,7 @@
                             </div>
                         </div>
                         <p><i class="fas fa-bath"></i> 10</p>
-                        <a href="descripcion1.html" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                        <a href="descripcion1.html" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                       
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                             </div>
                         </div>
                         <p><i class="fas fa-bath"></i>4</p>
-                        <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                        <a href="#" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                     </div>
                 </div>
                 <div class="tarjeta">
@@ -98,7 +98,7 @@
                             </div>
                         </div>
                         <p><i class="fas fa-bath"></i>5</p>
-                        <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                        <a href="#" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                     </div>
                 </div>
                 <div class="tarjeta">
@@ -119,7 +119,7 @@
                             </div>
                         </div>
                         <p><i class="fas fa-bath"></i> 7</p>
-                        <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                        <a href="#" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                     </div>
                 </div>
            
@@ -142,7 +142,7 @@
                             </div>
                         </div>
                         <p><i class="fas fa-bath"></i> 3</p>
-                        <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                        <a href="#" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                     </div>
                 </div>
 
@@ -164,7 +164,7 @@
                                 </div>
                             </div>
                             <p><i class="fas fa-bath"></i> 4</p>
-                            <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                            <a href="#" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                         </div>
                     </div>
 
@@ -186,7 +186,7 @@
                                     </div>
                                 </div>
                                 <p><i class="fas fa-bath"></i> 12</p>
-                                <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                                <a href="#" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                             </div>
                         </div>
 
@@ -208,7 +208,7 @@
                                         </div>
                                     </div>
                                     <p><i class="fas fa-bath"></i> 8</p>
-                                    <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                                    <a href="#" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                                 </div>
                                  </div>    
                                 </div>            
@@ -235,7 +235,7 @@
                     </div>
                     <div class="col1 centro">
                        <a href="index.html">Inicio</a>
-                       <a href="compras.html">Compras</a>
+                       <a href="compra.html">Compras</a>
                        <a href="alquiler1.html"class="activo">Alquiler </a>
                        <a href="contacto.html">Contacto</a>
                     </div>
