--- a/alquiler2.html
+++ b/alquiler2.html
@@ -54,7 +54,7 @@
                             </div>
                         </div>
                         <p><i class="fas fa-bath"></i>6</p>
-                        <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                        <a href="#" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                       
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                         <p><i class="fas fa-bath"></i>5</p>
-                        <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                        <a href="#" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                     </div>
                 </div>
                 <div class="tarjeta">
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                         <p><i class="fas fa-bath"></i>4</p>
-                        <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                        <a href="#" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                     </div>
                 </div>
                 <div class="tarjeta">
@@ -118,7 +118,7 @@
                             </div>
                         </div>
                         <p><i class="fas fa-bath"></i> 3</p>
-                        <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                        <a href="#" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                     </div>
                 </div>
            
@@ -141,7 +141,7 @@
                             </div>
                         </div>
                         <p><i class="fas fa-bath"></i> 4</p>
-                        <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                        <a href="#" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                     </div>
                 </div>
 
@@ -163,7 +163,7 @@
                                 </div>
                             </div>
                             <p><i class="fas fa-bath"></i>9</p>
-                            <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                            <a href="#" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                         </div>
                     </div>
 
@@ -185,7 +185,7 @@
                                     </div>
                                 </div>
                                 <p><i class="fas fa-bath"></i>3</p>
-                                <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                                <a href="#" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                             </div>
                         </div>
 
@@ -207,7 +207,7 @@
                                         </div>
                                     </div>
                                     <p><i class="fas fa-bath"></i>4</p>
-                                    <a href="#" class="btn">Reservar &nbsp;<i class="fas fa-home"></i></a>
+                                    <a href="#" class="btn">Ver &nbsp;<i class="fas fa-home"></i></a>
                                 </div>
                                  </div>    
                                 </div>            
@@ -232,7 +232,7 @@
                     </div>
                     <div class="col1 centro">
                        <a href="index.html" class="activo">Inicio</a>
-                       <a href="compras.html">Compras</a>
+                       <a href="compra.html">Compras</a>
                        <a href="alquiler.html">Alquiler</a>
                        <a href="contacto.html">Contacto</a>
                     </div>
