--- a/alquiler3.html
+++ b/alquiler3.html
@@ -234,7 +234,7 @@
                             <div class="col1 centro">
                                <a href="index.html">Inicio</a>
                                <a href="compra.html">Compras</a>
-                               <a href="alquiler.html class="activo"">Alquiler</a>
+                               <a href="alquiler1.html class="activo"">Alquiler</a>
                                <a href="contacto.html">Contacto</a>
                             </div>
                 
