--- a/compra1.html
+++ b/compra1.html
@@ -21,7 +21,7 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="venta.html" class="activo">Venta</a></li>
+                        <li><a href="compra.html" class="activo">Compra</a></li>
                         <li><a href="alquiler1.html">Alquiler</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
@@ -117,8 +117,8 @@
                     </div>
                     <div class="col1 centro">
                        <a href="index.html" class="activo">Inicio</a>
-                       <a href="compras.html">Compras</a>
-                       <a href="alquiler.html">Alquiler</a>
+                       <a href="compra.html">Compras</a>
+                       <a href="alquiler1.html">Alquiler</a>
                        <a href="contacto.html">Contacto</a>
                     </div>
                     <div class= "col1 dcha">
